--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ keywords = ["biology", "genomics", "statistics", "phylogeny", "evolution", "bioi
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
-dependencies = ["click", "numpy", "scitrack", "cogent3", "attrs", "sortedcontainers"]
+dependencies = ["click", "numpy", "scitrack", "cogent3", "attrs", "sortedcontainers", "blosc2"]
 classifiers = [
         "Development Status :: 5 - Production/Stable",
         "Intended Audience :: Science/Research",
