DEV: make sure and specify the develop version of cogent3
[CHANGED] make nox use the pyptoject.toml for installation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ keywords = ["biology", "genomics", "statistics", "phylogeny", "evolution", "bioi
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
-dependencies = ["attrs", "blosc2", "click", "cogent3", "numpy", "rich", "scitrack", "sortedcontainers"]
+dependencies = ["attrs", "blosc2", "click", "cogent3 @ git+https://github.com/cogent3/cogent3.git@develop", "numpy", "rich", "scitrack", "sortedcontainers"]
 classifiers = [
         "Development Status :: 5 - Production/Stable",
         "Intended Audience :: Science/Research",
