--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,17 @@ authors = [
 keywords = ["biology", "genomics", "statistics", "phylogeny", "evolution", "bioinformatics"]
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.10"
-dependencies = ["attrs", "blosc2", "click", "cogent3 @ git+https://github.com/cogent3/cogent3.git@develop", "numpy", "rich", "scitrack", "sortedcontainers"]
+requires-python = "3.10"
+dependencies = ["attrs",
+    "blosc2",
+    "click",
+    "cogent3 @ git+https://github.com/cogent3/cogent3.git@develop",
+    "numpy",
+    "rich",
+    "scitrack",
+    "sortedcontainers"]
 classifiers = [
-        "Development Status :: 5 - Production/Stable",
+        "Development Status :: 3 - Alpha",
         "Intended Audience :: Science/Research",
         "License :: OSI Approved :: BSD License",
         "Topic :: Scientific/Engineering :: Bio-Informatics",
