--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 keywords = ["biology", "genomics", "statistics", "phylogeny", "evolution", "bioinformatics"]
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = "3.10"
+requires-python = ">=3.10,<3.12"
 dependencies = ["attrs",
     "blosc2",
     "click",
@@ -27,6 +27,7 @@ classifiers = [
         "Topic :: Software Development :: Libraries :: Python Modules",
         "Operating System :: OS Independent",
         "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
     ]
 # the following are inferred from the source code
 dynamic = ["version", "description"]
@@ -71,7 +72,7 @@ exclude = '''
   | \.git
   | \.hg
   | \.mypy_cache
-  | \.tox
+  | \.nox
   | \.venv
   | _build
   | build
@@ -89,3 +90,4 @@ lines_after_imports=2
 lines_between_types=1
 multi_line_output=3
 use_parentheses=true
+src_paths = ["src", "tests","doc","noxfile.py"]
