--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = ["attrs",
     "blosc2",
     "click",
     "cogent3 @ git+https://github.com/cogent3/cogent3.git@develop",
+    "hdf5plugin",
     "h5py",
     "numpy",
     "rich",
