--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,3 +98,4 @@ src_paths = ["src", "tests","doc","noxfile.py"]
 dvgt_seq_file_to_data_store = "divergent.loader:dvgt_seq_file_to_data_store"
 dvgt_load_seqs = "divergent.loader:dvgt_load_seqs"
 dvgt_write_prepped_seqs = "divergent.writer:dvgt_write_prepped_seqs"
+dvgt_calc = "divergent.records:dvgt_calc"
