--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,7 +121,7 @@ exclude = [
 line-length = 88
 indent-width = 4
 
-target-version = "py39"
+target-version = "py310"
 
 [tool.ruff.lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
@@ -174,3 +174,6 @@ docstring-code-format = true
 # enabled.
 docstring-code-line-length = "dynamic"
 
+[tool.ruff.lint.isort]
+# group divergent imports last
+known-first-party = ["divergent"]
