API: multiple new apps in records!
[CHANGED] split the old dvgt_calc app into two separate apps, dvgt_max
    and dvgt_nmost.

[NEW] dvgt_max and dvgt_nmost take the path to the sequence store as one of
    their constructor args. To invoke the app, you provide the list of seqids
    you want to be used. This is now the basis for parallel execution.
    Other arguments are as previous for the different uses.

[NEW] dvgt_final_max is an app which replaces the _max_set() function.
    dvgt_final_nmost() does the same type of thing for the nmost app.
    These two are applied to the result of applything the dvgt_max and
    dvgt_nmost apps to the results from parallel computation.

[NEW] new records.records_from_seq_store() takes a list of identifiers and
    returns their data from the HDF5 storage as SeqRecord instances

[NEW] records.apply_app() standardises the application of the different
    app combinations to data.

[CHANGED] deleted the make_task_iterator() function, no longer required.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,10 @@ doc  = ["click",
 dvgt_write_seq_store = "divergent.io:dvgt_write_seq_store"
 dvgt_load_seqs = "divergent.io:dvgt_load_seqs"
 dvgt_write_prepped_seqs = "divergent.io:dvgt_write_prepped_seqs"
-dvgt_calc = "divergent.records:dvgt_calc"
+dvgt_max = "divergent.records:dvgt_max"
+dvgt_final_max = "divergent.records:dvgt_final_max"
+dvgt_nmost = "divergent.records:dvgt_nmost"
+dvgt_final_nmost = "divergent.records:dvgt_final_nmost"
 
 [tool.pytest.ini_options]
 addopts = ["--strict-config", "-ra"]
