--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,9 +78,9 @@ doc  = ["click",
         ]
 
 [project.entry-points."cogent3.app"]
-dvgt_write_seq_store = "divergent.io:dvgt_write_seq_store"
+dvgt_file_to_dir = "divergent.io:dvgt_file_to_dir"
 dvgt_load_seqs = "divergent.io:dvgt_load_seqs"
-dvgt_write_prepped_seqs = "divergent.io:dvgt_write_prepped_seqs"
+dvgt_write_seqs = "divergent.io:dvgt_write_seqs"
 dvgt_max = "divergent.records:dvgt_max"
 dvgt_final_max = "divergent.records:dvgt_final_max"
 dvgt_nmost = "divergent.records:dvgt_nmost"
