--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,7 @@ Documentation = "https://github.com/HuttleyLab/Divergent"
 "Source Code" = "https://github.com/HuttleyLab/Divergent/"
 
 [project.sdist]
-include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
-exclude = ["doc/*.html"]
+include = ["src/*", "pyproject.toml"]
 
 [project.scripts]
 dvgt = "divergent.cli:main"
