--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,14 +52,14 @@ jobs:
       - name: Upload sdist and wheel
         uses: actions/upload-artifact@v4
         with:
-          name: dvgt-wheel-sdist
+          name: dvs-wheel-sdist
           path: |
             ./dist/*.whl
             ./dist/*.tar.gz
   
   release_test:
     name: Release to Test PyPI
-    needs: [build, docbuild]
+    needs: [build]
     environment: release_test
     runs-on: ubuntu-latest
     permissions:
@@ -69,7 +69,7 @@ jobs:
       - name: Download sdist and wheel
         uses: actions/download-artifact@v4
         with:
-          name: dvgt-wheel-sdist
+          name: dvs-wheel-sdist
           path: ./dist
 
       - name: Publish package distributions to Test PyPI
@@ -89,7 +89,7 @@ jobs:
       - name: Download sdist and wheel
         uses: actions/download-artifact@v4
         with:
-          name: dvgt-wheel-sdist
+          name: dvs-wheel-sdist
           path: ./dist
 
       - name: Publish package distributions to PyPI
