--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   linters:
     runs-on: ubuntu-latest
-    if: github.repository == 'HuttleyLab/Divergent'
+    if: github.repository == 'HuttleyLab/DiverseSeq'
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
