API: simplify names of the cogent3 plugins
[CHANGED] the internal only dvs_max etc, renamed to `select_max` allowing
    us to make `dvs_max` the public name.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,6 @@ Documentation = "https://github.com/HuttleyLab/DiverseSeq"
 [tool.flit.sdist]
 include = ["tests/*"]
 
-[project.scripts]
-dvs = "diverse_seq.cli:main"
-
 [project.optional-dependencies]
 test = [
     "nox",
@@ -80,9 +77,12 @@ doc  = ["click",
         "plotly"
         ]
 
+[project.scripts]
+dvs = "diverse_seq.cli:main"
+
 [project.entry-points."cogent3.app"]
-dvs_select_nmost = "diverse_seq.records:dvs_select_nmost"
-dvs_select_max = "diverse_seq.records:dvs_select_max"
+dvs_nmost = "diverse_seq.records:dvs_nmost"
+dvs_max = "diverse_seq.records:dvs_max"
 
 [tool.pytest.ini_options]
 addopts = ["--strict-config", "-ra"]
