--- a/pyproject.toml
+++ b/pyproject.toml
@@ -140,6 +140,9 @@ unfixable = []
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.per-file-ignores]
+"src/**/cli.py" = [
+    "FBT001", # allow bool positionals in cli functions
+]
 "tests/**/*.py" = [
     "S101", # asserts allowed in tests...
     "INP001", # __init__.py files are not required...
