DEV: add requests to doc extra's in pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,8 @@ doc  = ["click",
         "nbsphinx",
         "numpydoc",
         "pandas",
-        "plotly"
+        "plotly",
+        "requests",
         ]
 
 [project.scripts]
