--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ doc  = ["click",
         "nbformat",
         "nbsphinx",
         "numpydoc",
+        "piqtree2",
         "pandas",
         "plotly",
         "requests",
