REL: bumped release to 2024.11.8a3
[CHANGED] added a dependency to doc optional extras

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ doc  = ["click",
         "pandas",
         "plotly",
         "requests",
+        "statsmodels",
         ]
 
 [project.scripts]
