DEV: address rename of piqtree2 to piqtree

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ doc  = ["click",
         "nbformat",
         "nbsphinx",
         "numpydoc",
-        "piqtree2",
+        "piqtree",
         "pandas",
         "plotly",
         "requests",
