DEV: another attemnpt to get mkdocs installed

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,6 +11,8 @@ build:
   tools:
     python: "3.13"
   commands:
+    - pip install ".[doc]"
+    - mkdocs --version
     - mkdocs build --clean
 
 mkdocs:
