DOC: remove -hp option from docs, relates to #135
[NEW] support turning of progress using environment variable
    DVS_HIDE_PROGRESS

Thanks @iimog for the suggestion!

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,7 +14,7 @@ build:
     - pip install ".[doc]"
     - mkdir -p $READTHEDOCS_OUTPUT/html
     - mkdocs --version
-    - mkdocs build --clean --site-dir $READTHEDOCS_OUTPUT/html
+    - DVS_HIDE_PROGRESS=1 mkdocs build --clean --site-dir $READTHEDOCS_OUTPUT/html
 
 mkdocs:
   configuration: mkdocs.yml
