DEV: don't allow errors during doc building to pass

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,9 +14,10 @@ theme:
 
 plugins:
     - mkdocs-jupyter:
+        allow_errors: false
         remove_tag_config:
             remove_input_tags:
-                - hide_code
+              - hide_code
         include_requirejs: true
         execute: true
     - markdown-exec:
