--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ requires-python = ">=3.10,<3.14"
 dependencies = [
     "attrs",
     "click",
-    "cogent3",
+    "cogent3>=2025.7.10a1",
     "hdf5plugin",
     "h5py!=3.12.0",
     "loky",
