ENH: added a new app for computing the delta-jsd for a single sequence
[NEW] dvs_delta_jsd constructor requires a reference sequence collection
    as an input argument along with moltype and k. The app takes one
    sequence as input and returns the name and delta-jsd for that sequence.

[NEW] Documented the app.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ dvs = "diverse_seq.cli:main"
 [project.entry-points."cogent3.app"]
 dvs_nmost = "diverse_seq.records:dvs_nmost"
 dvs_max = "diverse_seq.records:dvs_max"
+dvs_delta_jsd = "diverse_seq.records:dvs_delta_jsd"
 dvs_ctree = "diverse_seq.cluster:dvs_ctree"
 dvs_par_ctree = "diverse_seq.cluster:dvs_par_ctree"
 
