--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -22,6 +22,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install Chrome dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libnspr4 libnss3 libx11-6 libxcomposite1 libxcursor1 \
+            libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 \
+            libxrender1 libxtst6 libglib2.0-0 libatk1.0-0 \
+            libatk-bridge2.0-0 libcups2 libdrm2 libdbus-1-3 \
+            libexpat1 libfontconfig1 libgbm1 libgtk-3-0 libpango-1.0-0 \
+            libasound2
+      - uses: browser-actions/setup-chrome@v2
+
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
@@ -43,7 +55,6 @@ jobs:
           uv venv venv -p python
           source venv/bin/activate
           uv pip install ".[doc]"
-          plotly_get_chrome
 
       - name: Build Documentation
         run: |
