--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,17 +11,15 @@ build:
   tools:
     python: "3.13"
   commands:
-    - pip install ".[doc]"
-    - mkdir -p $READTHEDOCS_OUTPUT/html
-    - mkdocs --version
-    - DVS_HIDE_PROGRESS=1 mkdocs build --clean --site-dir $READTHEDOCS_OUTPUT/html
+    # Install the required dependencies
+    - pip install requests
+    # Run the script to download and extract the pre-built docs
+    - python rtd_get_docs.py
+    - echo "Documentation downloaded and extracted"
 
-mkdocs:
-  configuration: mkdocs.yml
+# Disable the default build processes since we're using pre-built docs
+sphinx:
+  configuration: null
 
 python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - doc
+  install: []
