--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rustc-hash = "2.0"
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 serde = { version = "1.0", features = ["derive"] }
 postcard = { version = "1.0", features = ["alloc"] }
-
+serde_json = "1.0"
 
 [features]
 default = ["python"]
