--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 [dependencies]
 pyo3 = { version = "0.27.0", features = ["extension-module"], optional = true }
 zarrs = { version = "0.22.10", features = ["zstd"] }
+zarrs_storage = { version = "0.4.0" }
 rustc-hash = "2.0"
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 serde = { version = "1.0", features = ["derive"] }
