DEV: use actions for rust tools and apt-get for lcov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,24 @@ jobs:
         with:
             python-version: "${{ matrix.python-version }}"
 
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: llvm-tools-preview
+
+      - name: Add LLVM tools to PATH
+        run: |
+          LLVM_PATH=$(rustc --print sysroot)/lib/rustlib/x86_64-unknown-linux-gnu/bin
+          echo "$LLVM_PATH" >> $GITHUB_PATH
+
+      - name: Install lcov
+        run: sudo apt-get update && sudo apt-get install -y lcov
+
+      - name: Cache Rust dependencies
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "."
+
       - name: Install uv
         uses: astral-sh/setup-uv@v7
         with:
@@ -36,7 +54,12 @@ jobs:
           uv tool install -p venv nox
 
       - name: "Run nox for ${{ matrix.python-version }}"
-        run: "nox -db uv --force-python python -s test_coveralls -- --cov-report lcov:lcov-${{matrix.os}}-${{matrix.python-version}}.lcov --cov-report term --cov-append --cov diverse_seq"
+        run: |
+          nox -db uv --force-python python -s rustcov
+
+      - name: "Rename merged coverage file"
+        run: |
+          mv coverage.lcov lcov-${{matrix.os}}-${{matrix.python-version}}.lcov
 
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@v2
@@ -44,7 +67,7 @@ jobs:
           parallel: true
           github-token: ${{ secrets.github_token }}
           flag-name: run-${{matrix.python-version}}-${{matrix.os}}
-          file: "tests/lcov-${{matrix.os}}-${{matrix.python-version}}.lcov"
+          file: "lcov-${{matrix.os}}-${{matrix.python-version}}.lcov"
 
   finish:
     name: "Finish Coveralls"
