--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ features = ["pyo3/extension-module"]
 module-name = "diverse_seq._dvs"
 
 [project.optional-dependencies]
-test = ["nox", "pytest", "pytest-cov", "maturin[patchelf]"]
+test = ["nox", "pytest", "pytest-cov", "maturin"]
 doc = [
     "diverse_seq[extra]",
     "mkdocs>=1.6.1",
