--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,31 +34,44 @@ jobs:
         run: "nox -db uv --force-python python -s test"
 
   build:
-    name: Build wheel and sdist
+    name: Build wheels
     needs: test
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.11", "3.12", "3.13", "3.14"]
 
     steps:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
-      
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
       - uses: actions/setup-python@v6
         with:
-          python-version: '3.13'
-      
-      - name: Install build dependency
+          python-version: ${{ matrix.python-version }}
+
+      - name: Upgrade pip and install build
         run: |
-          pip install build
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
+          python -m pip install build
 
-      - name: Build sdist and wheel
-        run: python -m build --wheel --sdist
+      - name: Build wheel (maturin backend)
+        run: |
+          python -m build --wheel
 
-      - name: Upload sdist and wheel
+      - name: Build sdist (once on ubuntu 3.13)
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.13'
+        run: |
+          python -m build --sdist
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v6
         with:
-          name: dvs-wheel-sdist
+          name: dvs-dist-${{ matrix.os }}-py${{ matrix.python-version }}
           path: |
             ./dist/*.whl
             ./dist/*.tar.gz
@@ -72,10 +85,9 @@ jobs:
       id-token: write
 
     steps:
-      - name: Download sdist and wheel
+      - name: Download all built artifacts
         uses: actions/download-artifact@v7
         with:
-          name: dvs-wheel-sdist
           path: ./dist
 
       - name: Publish package distributions to Test PyPI
@@ -92,10 +104,9 @@ jobs:
       id-token: write
 
     steps:
-      - name: Download sdist and wheel
+      - name: Download all built artifacts
         uses: actions/download-artifact@v7
         with:
-          name: dvs-wheel-sdist
           path: ./dist
 
       - name: Publish package distributions to PyPI
