--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,36 +3,6 @@ name: Release
 on: [workflow_dispatch]
 
 jobs:
-  test:
-    name: "Test on Python ${{ matrix.python-version }} (${{ matrix.os }})"
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.11", "3.12", "3.13", "3.14"]
-    steps:
-      - uses: "actions/checkout@v6"
-        with:
-          fetch-depth: 0
-
-      - uses: "actions/setup-python@v6"
-        with:
-            python-version: "${{ matrix.python-version }}"
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v7
-        with:
-          enable-cache: true
-          cache-dependency-glob: "pyproject.toml"
-
-      - name: "Installs for ${{ matrix.python-version }}"
-        run: |
-          uv venv venv -p python${{ matrix.python-version }}
-          uv tool install -p venv nox
-
-      - name: "Run nox for Python ${{ matrix.python-version }}"
-        run: "nox -db uv --force-python python -s test"
-
   build:
     name: Build wheels
     runs-on: ${{ matrix.os }}
@@ -74,7 +44,55 @@ jobs:
           path: |
             ./target/wheels/*.whl
             ./dist/*.tar.gz
-  
+
+  test:
+    needs: [build]
+    name: "Test on Python ${{ matrix.python-version }} (${{ matrix.os }})"
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.11", "3.12", "3.13", "3.14"]
+    steps:
+      - uses: "actions/checkout@v6"
+        with:
+          fetch-depth: 0
+
+      - uses: "actions/setup-python@v6"
+        with:
+            python-version: "${{ matrix.python-version }}"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+          cache-dependency-glob: "pyproject.toml"
+
+      - name: "Installs for ${{ matrix.python-version }}"
+        run: |
+          uv venv venv -p python${{ matrix.python-version }}
+          uv tool install -p venv nox
+
+      - name: Download built artifact for this matrix
+        uses: actions/download-artifact@v7
+        with:
+          name: dvs-dist-${{ matrix.os }}-py${{ matrix.python-version }}
+          path: ./dist
+
+      - name: Detect wheel path
+        run: |
+          python - << 'PY'
+          import glob, os
+          wheels = glob.glob('./dist/*.whl')
+          wheel = wheels[0] if wheels else ''
+          with open(os.environ['GITHUB_ENV'], 'a') as f:
+              f.write(f"WHEEL_PATH={wheel}\n")
+          print(f"Detected wheel: {wheel}")
+          PY
+
+      - name: "Run nox for Python ${{ matrix.python-version }}"
+        run: "nox -db uv --force-python python -s test"
+
   release_test:
     name: Release to Test PyPI
     needs: [test,build]
@@ -88,6 +106,7 @@ jobs:
         uses: actions/download-artifact@v7
         with:
           path: ./dist
+          merge-multiple: true
 
       - name: Publish package distributions to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
@@ -107,6 +126,7 @@ jobs:
         uses: actions/download-artifact@v7
         with:
           path: ./dist
+          merge-multiple: true
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
