--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,10 +78,11 @@ jobs:
         with:
           name: dvs-dist-${{ matrix.os }}-py${{ matrix.python-version }}
           path: ./dist
+          merge-multiple: true
 
       - name: Detect wheel path
         run: |
-          python -c "import glob, os; print(glob.glob('dist/*.whl'))"
+          python -c "import glob; print(glob.glob('dist/**/*.whl', recursive=True))"
 
       - name: "Run nox for Python ${{ matrix.python-version }}"
         run: "nox -db uv --force-python python -s test"
