try revised glob

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Detect wheel path
         run: |
-          python -c "import glob; print(glob.glob('dist/**/*.whl', recursive=True))"
+          python -c "import glob, os; wheels = glob.glob('dist/**/*.whl', recursive=True); wheel = wheels[0] if wheels else ''; env = os.environ['GITHUB_ENV']; open(env, 'a').write(f'WHEEL_PATH={wheel}\n'); print(f'Detected wheel: {wheel}')"
 
       - name: "Run nox for Python ${{ matrix.python-version }}"
         run: "nox -db uv --force-python python -s test"
