--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,36 +16,30 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - uses: actions/setup-python@v6
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Upgrade pip and install build
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build
-
-      - name: Build wheel (maturin backend)
-        run: |
-          # Build wheel and move it to dist/ so artifacts are flat
-          python -m build --wheel
-          python -c "import glob, os, shutil; os.makedirs('dist', exist_ok=True); [shutil.move(f, os.path.join('dist', os.path.basename(f))) for f in glob.glob('target/wheels/*.whl')]"
+      - name: Build wheels with cibuildwheel
+        uses: pypa/cibuildwheel@v2.21.3
+        env:
+          CIBW_BUILD: "cp${{ matrix.python-version }}-* pp*"
+          CIBW_SKIP: "*-win32 *-i686"
 
       - name: Build sdist (once on ubuntu 3.13)
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.13'
         run: |
+          python -m pip install --upgrade pip
+          python -m pip install build
           python -m build --sdist
+
+      - name: Move wheels to dist for consistent artifact structure
+        run: |
+          python -c "import glob, os, shutil; os.makedirs('dist', exist_ok=True); [shutil.move(f, os.path.join('dist', os.path.basename(f))) for f in glob.glob('wheelhouse/*.whl')]"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v6
         with:
           name: dvs-dist-${{ matrix.os }}-py${{ matrix.python-version }}
           path: |
-            ./dist/*.tar.gz
             ./dist/*.whl
+            ./dist/*.tar.gz
 
   test:
     needs: [build]
@@ -104,6 +98,10 @@ jobs:
           path: ./dist
           merge-multiple: true
 
+      - name: Flatten dist contents
+        run: |
+          python -c "import glob, os, shutil; files = glob.glob('dist/**/*.whl', recursive=True) + glob.glob('dist/**/*.tar.gz', recursive=True); os.makedirs('dist', exist_ok=True); [shutil.move(f, os.path.join('dist', os.path.basename(f))) for f in files if os.path.dirname(f) != 'dist']; print('Flattened files:', [os.path.basename(f) for f in files])"
+
       - name: Publish package distributions to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
@@ -123,6 +121,10 @@ jobs:
         with:
           path: ./dist
           merge-multiple: true
+
+      - name: Flatten dist contents
+        run: |
+          python -c "import glob, os, shutil; files = glob.glob('dist/**/*.whl', recursive=True) + glob.glob('dist/**/*.tar.gz', recursive=True); os.makedirs('dist', exist_ok=True); [shutil.move(f, os.path.join('dist', os.path.basename(f))) for f in files if os.path.dirname(f) != 'dist']; print('Flattened files:', [os.path.basename(f) for f in files])"
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
