--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.11", "3.12", "3.13", "3.14"]
 
     steps:
       - uses: actions/checkout@v6
@@ -19,7 +18,7 @@ jobs:
       - name: Build wheels with cibuildwheel
         uses: pypa/cibuildwheel@v2.21.3
         env:
-          CIBW_BUILD: "cp${{ matrix.python-version }}-* pp*"
+          CIBW_BUILD: "cp311-* cp312-* cp313-* cp314-*"
           CIBW_SKIP: "*-win32 *-i686"
 
       - name: Build sdist (once on ubuntu 3.13)
@@ -36,7 +35,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v6
         with:
-          name: dvs-dist-${{ matrix.os }}-py${{ matrix.python-version }}
+          name: dvs-dist-${{ matrix.os }}
           path: |
             ./dist/*.whl
             ./dist/*.tar.gz
