--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -33,7 +33,10 @@ jobs:
 
       - uses: "actions/setup-python@v6"
         with:
-            python-version: "3.13"
+            python-version: "3.14"
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
